# 3D-Fractals

./: .gitignore  CMakeLists.txt  imgui.ini
NEA/: NEA.sln
NEA/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
assets/shaders/: ray_marching.glsl
assets/shaders/mods/: colouring.glsl
assets/shaders/scene/: background.glsl  post_processing.glsl
dependencies/glad/: glad.h
include/fractals/: app_controller.hpp  camera.hpp  camera_controller.hpp  fractals.hpp  glfw_manager.hpp  glsl_manager.hpp  scene_renderer.hpp  shader.hpp  shader_manager.hpp  ui_manager.hpp
shaders/: background.glsl  colouring.glsl  fragment.frag  fragment2.frag  julia.glsl  kleinian.glsl  klenian.glsl  lighting.glsl  main.glsl  mandelbulb.glsl  menger_sponge.glsl  perlin_noise.glsl  ray_marching.glsl  transformations.glsl  uniforms.glsl
src/: app_controller.cpp  app_controller.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  config.h  fractal.cpp  fractal.h  fractals.cpp  glad.c  glfw_manager.cpp  glfw_manager.h  glsl_manager.cpp  glsl_manager.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  julia.cpp  julia.h  kleinian.cpp  kleinian.h  klenian.cpp  klenian.h  main.cpp  mandelbox.cpp  mandelbox.h  mandelbulb.cpp  mandelbulb.h  menger_sponge.cpp  menger_sponge.h  scene_renderer.cpp  scene_renderer.h  shader.cpp  shader.h  shader_manager.cpp  (+5 more)
src/internal/: app_controller.hpp  glfw_manager.hpp  shader_manager.hpp  ui_manager.hpp
src/shaders/: fragment.frag  signed_distance_functions.glsl  vertex.vert
(+18 files in other folders)
